--- a/sentry-provider/sentry-provider-db/pom.xml
+++ b/sentry-provider/sentry-provider-db/pom.xml
@@ -246,6 +246,8 @@ limitations under the License.
           <api>JDO</api>
           <metadataIncludes>**/*.jdo</metadataIncludes>
           <verbose>true</verbose>
+		  <!-- Windows config-->
+		  <fork>false</fork>
         </configuration>
         <executions>
           <execution>
