--- a/sentry-binding/sentry-binding-hive-v2/pom.xml
+++ b/sentry-binding/sentry-binding-hive-v2/pom.xml
@@ -36,6 +36,19 @@ limitations under the License.
   </properties>
 
   <dependencies>
+      <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-jdbc -->
+      <dependency>
+          <groupId>org.apache.hive</groupId>
+          <artifactId>hive-jdbc</artifactId>
+          <version>2.0.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
+
     <dependency>
       <groupId>org.apache.sentry</groupId>
       <artifactId>sentry-binding-hive-common</artifactId>
@@ -73,6 +86,8 @@ limitations under the License.
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
+
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
