--- a/sentry-service/sentry-service-server/pom.xml
+++ b/sentry-service/sentry-service-server/pom.xml
@@ -181,6 +181,7 @@ limitations under the License.
           <api>JDO</api>
           <metadataIncludes>**/*.jdo</metadataIncludes>
           <verbose>true</verbose>
+          <fork>false</fork>
         </configuration>
         <executions>
           <execution>
