--- a/sentry-binding/sentry-binding-hive-common/pom.xml
+++ b/sentry-binding/sentry-binding-hive-common/pom.xml
@@ -29,6 +29,10 @@ limitations under the License.
   <name>Sentry Hive Binding Common</name>
 
   <dependencies>
+    <dependency>
+      <groupId>org.apache.sentry</groupId>
+      <artifactId>sentry-log</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.thrift</groupId>
