--- a/sentry-dist/pom.xml
+++ b/sentry-dist/pom.xml
@@ -28,6 +28,10 @@ limitations under the License.
   <dependencies>
     <dependency>
       <groupId>org.apache.sentry</groupId>
+      <artifactId>sentry-log</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sentry</groupId>
       <artifactId>sentry-core-common</artifactId>
     </dependency>
     <dependency>
