--- a/sentry-log/pom.xml
+++ b/sentry-log/pom.xml
@@ -28,6 +28,10 @@ limitations under the License.
     <artifactId>sentry-log</artifactId>
     <dependencies>
         <dependency>
+            <groupId>javax.jdo</groupId>
+            <artifactId>jdo-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.39</version>
@@ -72,7 +76,129 @@ limitations under the License.
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+        <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/java/org/apache/sentry/log/model</directory>
+                <includes>
+                    <include>package.jdo</include>
+                </includes>
+            </resource>
+
+        </resources>
+        <plugins>
+
+            <plugin>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-maven-plugin</artifactId>
+                <configuration>
+                    <api>JDO</api>
+                    <metadataIncludes>**/*.jdo</metadataIncludes>
+                    <verbose>true</verbose>
+                    <fork>false</fork>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <reuseForks>false</reuseForks>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>datanucleus3</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <datanucleus-api-jdo.version>3.2.6</datanucleus-api-jdo.version>
+                <datanucleus-core.version>3.2.12</datanucleus-core.version>
+                <datanucleus-rdbms.version>3.2.12</datanucleus-rdbms.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-core</artifactId>
+                    <version>${datanucleus-core.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-api-jdo</artifactId>
+                    <version>${datanucleus-api-jdo.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-rdbms</artifactId>
+                    <version>${datanucleus-rdbms.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>datanucleus4</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <datanucleus-api-jdo.version>4.2.1</datanucleus-api-jdo.version>
+                <datanucleus-core.version>4.1.6</datanucleus-core.version>
+                <datanucleus-rdbms.version>4.1.7</datanucleus-rdbms.version>
+                <datanucleus-jdo.version>3.2.0-m3</datanucleus-jdo.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-core</artifactId>
+                    <version>${datanucleus-core.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-api-jdo</artifactId>
+                    <version>${datanucleus-api-jdo.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-rdbms</artifactId>
+                    <version>${datanucleus-rdbms.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>javax.jdo</artifactId>
+                    <version>${datanucleus-jdo.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
 
 </project>
