--- a/sentry-core/sentry-core-model-kafka/pom.xml
+++ b/sentry-core/sentry-core-model-kafka/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sentry</groupId>
     <artifactId>sentry-core</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.8.0</version>
   </parent>
 
   <artifactId>sentry-core-model-kafka</artifactId>
