--- a/sentry-log/pom.xml
+++ b/sentry-log/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
     <parent>
         <artifactId>sentry</artifactId>
         <groupId>org.apache.sentry</groupId>
-        <version>1.8.0-SNAPSHOT</version>
+        <version>1.8.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,7 +34,7 @@ limitations under the License.
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>5.1.6</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -80,21 +80,24 @@ limitations under the License.
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.datanucleus</groupId>
-            <artifactId>datanucleus-core</artifactId>
-            <version>4.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.datanucleus</groupId>
-            <artifactId>datanucleus-api-jdo</artifactId>
-            <version>4.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.datanucleus</groupId>
-            <artifactId>datanucleus-rdbms</artifactId>
-            <version>4.1.7</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.datanucleus</groupId>-->
+            <!--<artifactId>datanucleus-core</artifactId>-->
+            <!--<version>3.2.12</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.datanucleus</groupId>-->
+            <!--<artifactId>datanucleus-api-jdo</artifactId>-->
+            <!--<version>3.2.6</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.datanucleus</groupId>-->
+            <!--<artifactId>datanucleus-rdbms</artifactId>-->
+            <!--<version>3.2.12</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
 
 
@@ -111,6 +114,12 @@ limitations under the License.
                     <include>package.jdo</include>
                 </includes>
             </resource>
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<includes>-->
+                    <!--<include>*</include>-->
+                <!--</includes>-->
+            <!--</resource>-->
 
         </resources>
         <plugins>
@@ -158,15 +167,15 @@ limitations under the License.
         <profile>
             <id>datanucleus3</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <!--<datanucleus-api-jdo.version>3.2.6</datanucleus-api-jdo.version>-->
-                <!--<datanucleus-core.version>3.2.12</datanucleus-core.version>-->
-                <!--<datanucleus-rdbms.version>3.2.12</datanucleus-rdbms.version>-->
-                <datanucleus-api-jdo.version>4.2.1</datanucleus-api-jdo.version>
-                <datanucleus-core.version>4.1.6</datanucleus-core.version>
-                <datanucleus-rdbms.version>4.1.7</datanucleus-rdbms.version>
+                <datanucleus-api-jdo.version>3.2.6</datanucleus-api-jdo.version>
+                <datanucleus-core.version>3.2.12</datanucleus-core.version>
+                <datanucleus-rdbms.version>3.2.12</datanucleus-rdbms.version>
+                <!--<datanucleus-api-jdo.version>4.2.1</datanucleus-api-jdo.version>-->
+                <!--<datanucleus-core.version>4.1.6</datanucleus-core.version>-->
+                <!--<datanucleus-rdbms.version>4.1.7</datanucleus-rdbms.version>-->
             </properties>
             <dependencies>
                 <dependency>
@@ -189,7 +198,7 @@ limitations under the License.
         <profile>
             <id>datanucleus4</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
                 <datanucleus-api-jdo.version>4.2.1</datanucleus-api-jdo.version>
