--- a/sentry-service/sentry-service-server/src/test/resources/log4j.properties
+++ b/sentry-service/sentry-service-server/src/test/resources/log4j.properties
@@ -21,7 +21,7 @@
 #
 # For testing, it may also be convenient to specify
 
-log4j.rootLogger=DEBUG,console
+log4j.rootLogger=INFO,console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
